Updating to different pictures

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('pics/gang.jpg');
+  background-image: url('pics/background.jpg');
   background-size: contain;
 },
 .space {
