--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,4 @@
 body {
-  background-image: url('pics/background.jpg');
+  background-image: url('../pics/background.jpg');
   background-size: contain;
-},
-.space {
-  width:200px;
-},
-.title {
-  background: white;
-  width: 500px;
 }
